--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.7.0",
     "antd": "^3.7.3",
     "axios": "^0.18.0",
     "react": "^16.4.1",
